tests/invalid/comprehension_heterogeneous_tuple/main.py
t: tuple[int, str] = (1, "hello")
y: list[int] = [x for x in t]
